--- a/formatter_ex_lib/CMakeLists.txt
+++ b/formatter_ex_lib/CMakeLists.txt
@@ -5,12 +5,12 @@ project(formatter_ex_lib)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_subdirectory(/../formatter_lib formatter_lib_dir)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../formatter_lib formatter_lib_dir)
 
-add_library(formatter_ex_lib STATIC /formatter_ex.cpp)
+add_library(formatter_ex_lib STATIC ${CMAKE_CURRENT_SOURCE_DIR}/formatter_ex.cpp)
 
 target_include_directories(formatter_ex_lib PUBLIC
-/../formatter_lib
+${CMAKE_CURRENT_SOURCE_DIR}/../formatter_lib
 )
 
-target_link_libraries(formatter_ex_lib)
+target_link_libraries(formatter_ex_lib formatter_lib)
